test/org/midica/testfiles/failing/eff-cd-src-unknown-2.midica
INCLUDE inc/instruments.midica

0: ctrl_dest
0:   .src(ctrl=128)
0:   .dest(vol,10%)
0:   .on()

